[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sharedmemory-ai"
version = "0.3.0"
description = "Python SDK for SharedMemory.ai — the persistent memory layer for AI agents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [{ name = "SharedMemory", email = "hello@sharedmemory.ai" }]
keywords = ["ai", "memory", "agents", "llm", "knowledge-graph", "rag"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "httpx>=0.24.0",
]

[project.urls]
Homepage = "https://sharedmemory.ai"
Documentation = "https://docs.sharedmemory.ai/sdks/overview"
Repository = "https://github.com/sharedmemoryai/python-sdk"

[tool.hatch.build.targets.wheel]
packages = ["sharedmemory"]
